# LawSchool-

./: .gitignore  README.md  docker-compose.yml
services/pipeline/: .dockerignore  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
services/pipeline/migrations/: env.py  script.py.mako
services/pipeline/migrations/versions/: 172ddf66d061_jobs_track_long_running_generation_out_.py  25700522eb07_initial_schema.py
services/pipeline/scripts/: bench_llm.py  diagnose_gate.py  migrate_fs_to_db.py  smoke_e2e.py
services/pipeline/src/pipeline/: __init__.py  api.py  embeddings.py  export.py  jobs.py  models.py  query.py  service.py  storage.py
services/pipeline/src/pipeline/artifacts/: __init__.py  fidelity.py  generate.py  prompts.py
services/pipeline/src/pipeline/db/: __init__.py  engine.py  models.py  repository.py
services/pipeline/src/pipeline/drafting/: __init__.py  export.py  generate.py  models.py  prompts.py  store.py  verify.py
services/pipeline/src/pipeline/evals/: __init__.py  cache.py  gold.py  judge.py  matcher.py  metrics.py  run.py  runner.py  store.py
services/pipeline/src/pipeline/ingest/: __init__.py  classify.py  extract.py  matter.py
services/pipeline/src/pipeline/llm/: __init__.py  base.py  claude.py  ollama.py
services/pipeline/src/pipeline/structure/: __init__.py  (+4 more)
services/pipeline/tests/: conftest.py  test_api.py  test_artifacts.py  test_drafting.py  test_drafting_loop.py  test_evals.py  test_fidelity.py  test_ingest.py  test_jobs.py  test_judge.py  test_llm.py  test_repository.py  test_service.py  test_structure.py
(+32 files in other folders)
