[project]
name = "pipeline"
version = "0.1.0"
description = "lawschool document pipeline: ingestion, structuring, artifact agents"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.90",
    "boto3>=1.35",
    "fastapi[standard]>=0.115",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pymupdf>=1.25",
    "python-docx>=1.1",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 100
